--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
     "prettier": "^2.4.1"
   },
   "lint-staged": {
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,jsx,css,scss,md}": "prettier --write"
   }
 }
