--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "json-server": "^0.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,7 +47,6 @@
   "devDependencies": {
     "concurrently": "^6.3.0",
     "husky": "^7.0.4",
-    "json-server": "^0.17.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1"
   },
